--- a/Opdracht 004 (Netlify)/index.html
+++ b/Opdracht 004 (Netlify)/index.html
@@ -6,7 +6,7 @@
      <body>
          <main>
             <h1>Opdracht 3: Semantic HTML</h1>
-                <img height="250"src="C:\Winc_ Academy\Opdracht\Opdracht 004 (Netlify)/170548.jpg"
+                <img height="250"src="https://github.com/akomen594/Opdracht-004/blob/main/Opdracht%20004%20(Netlify)/20210507_170548.jpg
          </main>
          <section><h1>Kikkers</h1>  
             <h2>Kikkers zijn amfibieën en er zijn tegenwoordig ruim 7300 verschillende soorten kikkers beschreven.
