--- a/Opdracht 004 (Netlify)/index.html
+++ b/Opdracht 004 (Netlify)/index.html
@@ -6,21 +6,21 @@
      <body>
          <main>
             <h1>Opdracht 3: Semantic HTML</h1>
-                <img height="250"src="C:\Winc_ Academy\Opdracht\Opdracht 004 (Netlify)/170548.jpg"
+                <img height="250"src="https://github.com/akomen594/Opdracht-004/tree/main/Opdracht%20004%20(Netlify)/170548.jpg"
          </main>
          <section><h1>Kikkers</h1>  
             <h2>Kikkers zijn amfibieën en er zijn tegenwoordig ruim 7300 verschillende soorten kikkers beschreven.
                 In de link hieronder zijn 3 soorten uitgelicht.
-            <nav><a href="C:\Winc_ Academy\Opdracht\Opdracht 004 (Netlify)/Opdracht 2 (pagina 1).html" target="_blank"
+            <nav><a href="https://github.com/akomen594/Opdracht-004/tree/main/Opdracht%20004%20(Netlify)/Opdracht 2 (pagina 1).html" target="_blank"
                 <h1>Voor meer informatie over Kikkersoorten klik hier</h1></a> </nav>     
          </section>
                
             <h3>Bye Bye</h3>
-            <img height="400"src="C:\Winc_ Academy\Opdracht\Opdracht 004 (Netlify)/.Bloempak.jpg"
+            <img height="400"src="https://github.com/akomen594/Opdracht-004/tree/main/Opdracht%20004%20(Netlify)/.Bloempak.jpg"
         <footer>
             <hr>
             <nav><ul><h4>2021 test footer</h4>
-                    <li><a href="C:\Winc_ Academy\Opdracht\Opdracht 004 (Netlify)/aboutindex.html"target="_black"><h4>over mij </h4></a> </li>
+                    <li><a href="https://github.com/akomen594/Opdracht-004/tree/main/Opdracht%20004%20(Netlify)/aboutindex.html"target="_black"><h4>over mij </h4></a> </li>
                     <li>adres</li>
             </ul></nav>
         </footer>
